# test_docker_gui_uid

./: .gitignore  Dockerfile  README.md  docker-compose.yml  generate_encryptedkey.py  health_test.sh  pyproject.toml
app/: main.py
app/tests/: test_main.py
